Library/AXL(Library)/Dynamic Link/DAXDEV.h

typedef DWORD   PASCAL EXPORT funcAxmSetSendAxisCommand(long lAxisNo, WORD wCommand, WORD* wpSendData, WORD wLength);
extern funcAxmSetSendAxisCommand                *AxmSetSendAxisCommand;