Library/AXL(Library)/Delphi/AXDev.pas


// It is API that set the value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
// Default value : 0
// Setting value Range : 0 ~ FFFFH
function AxmSetVelocityFeedForward(lAxisNo : LongInt; dwVelocityFeedForward : DWord) : DWord; stdcall;

// It is API that read value of Velocity Feed Forward of VFF Field of INTERPOLATE and LATCH Command.
function AxmGetVelocityFeedForward(lAxisNo : LongInt; dwpVelocityFeedForward : PDWord) : DWord; stdcall;


// Set Encoder type.
// Default value : 0(TYPE_INCREMENTAL)
// Setting range : 0 ~ 1
// dwEncoderType : 0(TYPE_INCREMENTAL), 1(TYPE_ABSOLUTE).
function AxmSignalSetEncoderType(lAxisNo : LongInt; dwEncoderType : DWord) : DWord; stdcall;


// Verify Encoder type.
function AxmSignalGetEncoderType(lAxisNo : LongInt; dwpEncoderType : PDWord) : DWord; stdcall;



// For updating the slave firmware(only for RTEX-PM).
//function AxmSetSendAxisCommand(lAxisNo : LongInt; wCommand : Word; wpSendData : PDWord; wLength : Word) : DWord; stdcall;

//======== Only for PCI-R1604-RTEX, RTEX-PM==============================================================
// When Input Universal Input 2, 3, Set Jog move velocity
// Set only once execute after all drive setting (Ex, PulseOutMethod, MoveUnitPerPulse etc..)
function AxmMotSetUserMotion(lAxisNo : LongInt; dVelocity : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;


// When Input Universal Input 2, 3, Set Jog move usage
// Setting value :  0(DISABLE), 1(ENABLE)
function AxmMotSetUserMotionUsage(lAxisNo: LongInt; dwUsage : DWord) : DWord; stdcall;


// Set Load/UnLoad Position to Automatically move use MPGP Input
function  AxmMotSetUserPosMotion(lAxisNo : LongInt; dVelocity : Double; dAccel : Double; dDecel : Double; dLoadPos : Double; dUnLoadPos : Double; dwFilter : DWord; dwDelay : DWord) : DWord; stdcall;


// Set Usage Load/UnLoad Position to Automatically move use MPGP Input
// Setting value :  0(DISABLE), 1(Position function A), 2(Position function B)
function  AxmMotSetUserPosMotionUsage(lAxisNo : LongInt; dwUsage : DWord) : DWord; stdcall;

//========================================================================================================

//======== SIO-CN2CH, Only for absolute position trigger module(B0) ================================================
// The API of writing memory data.
function AxcKeWriteRamDataAddr(lChannelNo : LongInt; dwAddr : DWord; dwData : DWord) : DWord; stdcall;
// The API of reading memory data.
function AxcKeReadRamDataAddr(lChannelNo : LongInt; dwAddr : DWord; dwpData : PDWord) : DWord; stdcall;
// Memory initialization API.
function AxcKeResetRamDataAll(lModuleNo : LongInt; dwData : DWord) : DWord; stdcall;
// Trigger timeout setting API.
function AxcTriggerSetTimeout(lChannelNo : LongInt; dwTimeout : DWord) : DWord; stdcall;
// Trigger timeout checking API.
function AxcTriggerGetTimeout(lChannelNo : LongInt; dwpTimeout : PDWord) : DWord; stdcall;
// Trigger Waiting State checking API.
function AxcStatusGetWaitState(lChannelNo : LongInt; dwpState : PDWord) : DWord; stdcall;
// Trigger Waiting State setting API.
function AxcStatusSetWaitState(lChannelNo : LongInt; dwState : DWord) : DWord; stdcall;

// Write command to designated channel.
function AxcKeSetCommandData32(lChannelNo : LongInt; dwCommand : DWord ; dwData : DWord) : DWord; stdcall;
// Write command to designated channel.
function AxcKeSetCommandData16(lChannelNo : LongInt; dwCommand : DWord ; wData : Word) : DWord; stdcall;
// Verify register of specified channel.
function AxcKeGetCommandData32(lChannelNo : LongInt; dwCommand : DWord ; dwpData : PDWord) : DWord; stdcall;
// Verify register of specified channel.
function AxcKeGetCommandData16(lChannelNo : LongInt; dwCommand : DWord ; wpData : PWord) : DWord; stdcall;

//========================================================================================================

//======== Only for PCI-N804/N404, Sequence Motion ===========================================================
// Set Axis Information of sequence Motion (min 1axis)
// lSeqMapNo : Sequence Motion Index Point
// lSeqMapSize : Number of axis
// long* LSeqAxesNo : Number of arrary
function AxmSeqSetAxisMap(lSeqMapNo : LongInt; lSeqMapSize : LongInt; lpSeqAxesNo : PLongInt) : DWord; stdcall;
function AxmSeqGetAxisMap(lSeqMapNo : LongInt; lSeqMapSize : PLongInt; lpSeqAxesNo : PLongInt) : DWord; stdcall;


// Set Standard(Master)Axis of Sequence Motion.
// By all means Set in AxmSeqSetAxisMap setting axis.
function AxmSeqSetMasterAxisNo(lSeqMapNo : LongInt; lMasterAxisNo : LongInt) : DWord; stdcall;


// Notifies the library node start loading of Sequence Motion.
function AxmSeqBeginNode(lSeqMapNo : LongInt) : DWord; stdcall;


// Notifies the library node end loading of Sequence Motion.
function AxmSeqEndNode(lSeqMapNo : LongInt) : DWord; stdcall;


// Start Sequence Motion Move.
function AxmSeqStart(lSeqMapNo : LongInt; dwStartOption : DWord) : DWord; stdcall;


// Set each profile node Information of Sequence Motion in Library.
// if used 1axis Sequence Motion, Must be Set *dPosition one Array.
function AxmSeqAddNode(lSeqMapNo : LongInt; dpPosition : PDouble; dVelocity : Double; dAcceleration : Double; dDeceleration : Double; dNextVelocity : Double) : DWord; stdcall;


// Return Node Index number of Sequence Motion.
function AxmSeqGetNodeNum(lSeqMapNo : LongInt; lpCurNodeNo : PLongInt) : DWord; stdcall;


// Return All node count of Sequence Motion.
function AxmSeqGetTotalNodeNum(lSeqMapNo : LongInt; lpTotalNodeCnt : PLongInt) : DWord; stdcall;


// Return Sequence Motion drive status  of specific SeqMap.
// dwInMotion : 0(Drive end), 1(In drive)
function AxmSeqIsMotion(lSeqMapNo : LongInt; dwpInMotion : PDWord) : DWord; stdcall;


// Clear Sequence Motion Memory.
function AxmSeqWriteClear(lSeqMapNo : LongInt) : DWord; stdcall;


// Stop sequence motion
// dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP)
function AxmSeqStop(lSeqMapNo : LongInt; dwStopMode : DWord) : DWord; stdcall;


//========================================================================================================

//======== Only for PCIe-Rxx04-SIIIH ==========================================================================
// (SIIIH, MR_J4_xxB, Para : 0 ~ 8) ==
//     [0] : Command Position
//     [1] : Actual Position
//     [2] : Actual Velocity
//     [3] : Mechanical Signal
//     [4] : Regeneration load factor(%)
//     [5] : Effective load factor(%)
//     [6] : Peak load factor(%)
//     [7] : Current Feedback
//     [8] : Command Velocity
function AxmStatusSetMon(lAxisNo : LongInt; dwParaNo1 : DWord; dwParaNo2 : DWord; dwParaNo3 : DWord; dwParaNo4 : DWord; dwUse : DWord) : DWord; stdcall;
function AxmStatusGetMon(lAxisNo : LongInt; dwpParaNo1 : PDWord; dwpParaNo2 : PDWord; dwpParaNo3 : PDWord; dwpParaNo4 : PDWord; dwpUse : PDWord) : DWord; stdcall;
function AxmStatusReadMon(lAxisNo : LongInt; dwpParaNo1 : PDWord; dwpParaNo2 : PDWord; dwpParaNo3 : PDWord; dwpParaNo4 : PDWord; dwpDataValid : PDWord) : DWord; stdcall;
function AxmStatusReadMonEx(lAxisNo : LongInt; lpDataCnt : PLongInt; dwpReadData : PDWord) : DWord; stdcall;

//=============================================================================================================

//======== Only for PCI-R32IOEV-RTEX ===========================================================================
// The API for read or write HPI register which allocated as I/O port.
// I/O Registers for HOST interface.
// I/O 00h Host status register (HSR)
// I/O 04h Host-to-DSP control register (HDCR)
// I/O 08h DSP page register (DSPP)
// I/O 0Ch Reserved
function AxlSetIoPort(lBoardNo : LongInt; dwAddr : DWord; dwData : DWord) : DWord; stdcall;
function AxlGetIoPort(lBoardNo : LongInt; dwAddr : DWord; dwpData : PDWord) : DWord; stdcall;

//======== Only for PCI-R3200-MLIII ===========================================================================
// Basic information setting API for firmware update of M-III Master board.
function AxlM3SetFWUpdateInit(lBoardNo : LongInt; dwTotalPacketSize : DWord; dwProcTotalStepNo : DWord) : DWord; stdcall;
// Verify setting value of 'AxlM3SetFWUpdateInit'.
function AxlM3GetFWUpdateInit(lBoardNo : LongInt; dwpTotalPacketSize : PDWord; dwpProcTotalStepNo : PDWord) : DWord; stdcall;


// M-III Master board firmware update data transfer API.
function AxlM3SetFWUpdateCopy(lBoardNo : LongInt; dwpPacketData : PDWord; dwPacketSize : DWord) : DWord; stdcall;
// Verify setting value of 'AxlM3SetFWUpdateCopy'.
function AxlM3GetFWUpdateCopy(lBoardNo : LongInt; dwpPacketSize : PDWord) : DWord; stdcall;


// Execute firmware update of M-III Master Board.
function AxlM3SetFWUpdate(lBoardNo : LongInt; dwFlashBurnStepNo : DWord) : DWord; stdcall;
// Verifying result of execute firmware update of M-III Master Board.
function AxlM3GetFWUpdate(lBoardNo : LongInt; dwpFlashBurnStepNo : PDWord; dwpIsFlashBurnDone : PDWord) : DWord; stdcall;

// The API for setting EEPROM data of M-III Master board.
function AxlM3SetCFGData(lBoardNo : LongInt; dwpCmdData : PDWord; dwCmdDataSize : DWord) : DWord; stdcall;
// The API for getting data from EEPROM of M-III Master board.
function AxlM3GetCFGData(lBoardNo : LongInt; dwpCmdData : PDWord; dwCmdDataSize : DWord) : DWord; stdcall;

// The API for setting CONNECT PARAMETER information of M-III Master board.
function AxlM3SetMCParaUpdateInit(lBoardNo : LongInt; wCh0Slaves : Word; wCh1Slaves : Word; dwCh0CycTime : DWord; dwCh1CycTime : DWord; dwChInfoMaxRetry : DWord) : DWord; stdcall;
// The API for verifying CONNECT PARAMETER information of M-III Master board.
function AxlM3GetMCParaUpdateInit(lBoardNo : LongInt; wpCh0Slaves : PWord; wpCh1Slaves : PWord; dwpCh0CycTime : PDWord; dwpCh1CycTime : PDWord; dwpChInfoMaxRetry : PDWord) : DWord; stdcall;
// The API for transmit CONNECT PARAMETER information of M-III Master board.
function AxlM3SetMCParaUpdateCopy(lBoardNo : LongInt; wIdx : Word; wChannel : Word; wSlaveAddr : Word; dwProtoCalType : DWord; dwTransBytes : DWord; dwDeviceCode : DWord) : DWord; stdcall;
// The API for verifying transmit CONNECT PARAMETER information of M-III Master board.
function AxlM3GetMCParaUpdateCopy(lBoardNo : LongInt; wIdx : Word; wpChannel : PWord; wpSlaveAddr : PWord; dwpProtoCalType : PDWord; dwpTransBytes : PDWord; dwpDeviceCode : PDWord) : DWord; stdcall;

// The API for checking register as DWord unit within M-III Master board.
function AxlBoardReadDWord(lBoardNo : LongInt; wOffset : Word; dwpData : PDWord) : DWord; stdcall;
// The API for setting register as DWord unit within M-III Master board.
function AxlBoardWriteDWord(lBoardNo : LongInt; wOffset : Word; dwData : DWord) : DWord; stdcall;

// Setting and verifying extension register as DWord unit within board.
function AxlBoardReadDWordEx(lBoardNo : LongInt; dwOffset : DWord; dwpData : PDWord) : DWord; stdcall;
function AxlBoardWriteDWordEx(lBoardNo : LongInt; dwOffset : DWord; dwData : DWord) : DWord; stdcall;
